--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,24 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-aop-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-aspects-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-beans-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-context-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-context-support-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-core-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-expression-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-instrument-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-instrument-tomcat-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-jdbc-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-jms-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-orm-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-oxm-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-test-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-tx-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-web-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-webmvc-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/spring-webmvc-portlet-3.2.0.RELEASE.jar"/>
+	<classpathentry kind="lib" path="D:/MyEclipse10Workspace/zfutils/lib/commons-logging.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
